--- a/Keaapp.html
+++ b/Keaapp.html
@@ -93,7 +93,7 @@
                 <img src="images/mykeaapp.png" alt="myKEA app logo">
 
 
-                <p>Link til Dokumentationssite og præsentation</p>
+                <p>Link til Dokumentationssite og præsentation:</p>
                 <p>
                     <a href="http://shawnamercano.dk/kea/04-ux/01-bruger/index.html" target="_blank">Dokumentationssite</a>
                     <br>
