--- a/Portfolio.html
+++ b/Portfolio.html
@@ -148,7 +148,7 @@
                         <br>
                         <hr>
                         <br>
-                        <p> Redesign af en allerede eksisterende hjemmeside. <br> Min gruppe redesignede website for Børnehuset Kong Gulerod - En privat dagpleje i København NV. (Username: kea Password: kea)
+                        <p> Redesign af en allerede eksisterende hjemmeside. <br> Min gruppe redesignede website for Børnehuset Kong Gulerod - En privat dagpleje i København NV. <br>(Username: kea Password: kea)
                         </p>
 
                     </div>
@@ -186,7 +186,7 @@
                         <hr>
                         <br>
                         <p>
-                            Et animationsspil om en gammel mand, der skal tage stilling til, om han vil redde en baby, der triller væk fra sin uopmærksomme mor.
+                            Et animationsspil om en gammel mand, der skal tage stilling til om han vil redde en baby, der triller væk fra sin uopmærksomme mor.
                         </p>
 
                     </div>
@@ -208,7 +208,7 @@
                         <hr>
                         <br>
                         <p>
-                            Et animationsspil udarbejdet for Sex &amp; Samfund og Privat Snak. Målgruppen var 13-16 årige med og fokus på billeddeling.
+                            Et animationsspil produceret for Sex &amp; Samfund og Privat Snak. Målgruppen var 13-16 årige med og fokus på billeddeling.
                         </p>
 
                     </div>
