--- a/Redesign.html
+++ b/Redesign.html
@@ -79,7 +79,7 @@
                     <h3>Tema 3 - Grundlæggende Video
                     </h3>
                     <p>
-                        I dette projekt blev gruppen stillet opgaven at redesigne en eksisterende virksomheds hjemmeside - med fokus på at tydeliggøre virksomhedens koncept og interesser, samt at overskueliggøre hjemmesiden ved at forbedre brugervenligheden. Dertil skulle vi også producere en kort video, der præsenterede virksomheden.
+                        I dette projekt blev gruppen stillet opgaven, at redesigne en eksisterende virksomheds hjemmeside - med fokus på at tydeliggøre virksomhedens koncept og interesser, samt at overskueliggøre hjemmesiden ved at forbedre brugervenligheden. Dertil skulle vi også producere en kort video, der præsenterede virksomheden.
 
                         <br> Min gruppe fik lov at lave video og redesign for en lille privat dagpleje, Børnehuset Kong Gulerod. <br> Efter at have haft undervisning i interviewteknik, video optagelse, klipning og redigering af film, fik vi produceret en video som passede til deres profil. <br> Resultatet af de to ugers arbejde, var et færdigt site der nu bliver brugt af Børnehuset Kong Gulerod.
 
@@ -95,7 +95,7 @@
 
 
                 <p>
-                    Herunder er links til vores proces, det færdige resultat og Børnehuset Kong Gulerods hjemmeside
+                    Herunder er links til vores proces, det færdige resultat og Børnehuset Kong Gulerods hjemmeside:
                 </p>
 
 
