--- a/Stilartsite.html
+++ b/Stilartsite.html
@@ -93,7 +93,7 @@
 
 
                 <p>
-                    Da layoutet var på plads, blev vi introduceret til HTML og CSS - og efter et par øvelser var vi klar til at bruge det i vores stilart opgave. Da vi havde fået stablet et helt simpelt site på benene fik vi indblik i typografi og farveteori. Vi skulle blandt andet, udvælge minimum to fonte, der skulle indgå i det endelige site.
+                    Da layoutet var på plads, blev vi introduceret til HTML og CSS - og efter et par øvelser var vi klar til at implementere det i vores stilart opgave. Da vi havde fået stablet et helt simpelt site på benene, fik vi indblik i typografi og farveteori. Vi skulle blandt andet, udvælge minimum to fonte, der skulle indgå i det endelige site.
                 </p>
 
 
