--- a/everydayproject.html
+++ b/everydayproject.html
@@ -80,17 +80,15 @@
                     <h3>Tema 3 - Grundlæggende Video
                     </h3>
                     <p>
-                        I forbindelse med Copenhagen International Documentary Film Festival CPH:DOX, fik vi til opgave at lave en kort video til deres videoplatform, Everyday Project. <br> Opgave formuleringen var at vi skulle finde en eller flere personer som havde en spændende historie at fortælle og som forholdt sig til ét de to temaer: mennesket &amp; demokrati.
+                        I forbindelse med Copenhagen International Documentary Film Festival CPH:DOX, fik vi til opgave at lave en kort video til deres videoplatform, Everyday Project. <br> Opgave formuleringen var at vi skulle finde en eller flere personer som havde en spændende historie at fortælle og som forholdt sig til ét de to temaer: mennesket / demokrati.
                     </p>
-                    <br>
                     <p>
                         Vi blev delt op i grupper og første punkt på dagsordenen var at finde en person vi kunne interwieve.
                         <br> Da vi havde fundet en person til vores video interviw, kunne vå gå i gang med at planlægge videoens og interviewets opbygning. <br> I løbet af ugen fik vi stiftet bekendskab med og udviklet kompetencer indenfor interviewteknik, samt optagelse, klipning og redigering af film.
                     </p>
 
 
-                    <br>
-                    <p> Resultatet blev denne video, der tager udgangspunkt i 24 årige Simon, der i løbet af det sidste år har tabt sig 80 kg.
+                    <p> Resultatet blev denne video, der tager udgangspunkt i 24 årige Simon, der på blot et år har tabt sig 80 kg.
                     </p>
 
                     <div class="responsive">
