--- a/sexogsamfund.html
+++ b/sexogsamfund.html
@@ -97,7 +97,7 @@
                 <h4>Stand til fernisering</h4>
                 <img src="images/animation_fernisering.jpg" alt="stand til fernisering">
 
-                <p>Link til Dokumentationssite og animationsspillet</p>
+                <p>Link til Dokumentationssite og animationsspillet:</p>
                 <p>
                     <a href="http://shawnamercano.dk/kea/02-animation/02_05_01_Gruppe-4_dokumentationssite/index.html" target="_blank">Dokumentationssite</a>
 
