--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!------ Fonts -------->
     <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
 
     <!-- link til facebook og insta -->
