--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="style.css">
 
     <!------ Fonts -------->
-    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+
+    </style>
 
 
     <!-- link til facebook og insta -->
@@ -73,6 +77,8 @@
     </div>
 
     <section id="portfolio">
+
+
 
         <!--------- Række 1 ------------>
 
@@ -293,7 +299,7 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
 
 
     </footer>
