--- a/everydayproject.html
+++ b/everydayproject.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="style.css">
 
     <!------ Fonts -------->
-    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+
+    </style>
 
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
@@ -107,7 +110,7 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
 
 
     </footer>
