--- a/Joeapp.html
+++ b/Joeapp.html
@@ -10,7 +10,10 @@
 
     <!------ Fonts -------->
 
-    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
+  <style>
+        @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+
+    </style>
 
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
@@ -117,7 +120,7 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
 
 
     </footer>
