--- a/animation.html
+++ b/animation.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="style.css">
 
     <!------ Fonts -------->
-    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+    </style>
 
-  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
 
     <!-- link til facebook og insta -->
@@ -121,7 +123,7 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
 
 
     </footer>
