--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="style.css">
 
     <!------ Fonts -------->
-    <link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+    </style>
 
-<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
 
     <!-- link til facebook og insta -->
@@ -79,7 +81,7 @@
 
     <!-- footer -->
     <footer>
-        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano ·
+        1. semester eksamenes Portfolio · Juni 2018<br> af Shawna Schmidt Mercano
 
 
     </footer>
